--- a/style.css
+++ b/style.css
@@ -23,14 +23,17 @@ body * {
 
 header {
     padding-top: 32px;
+    height: calc(120px + 32px);
 }
 
 header div {
     width: 120px;
     height: 120px;
     margin: auto;
-    display: flex; 
-
+    display: flex;
+    padding: 4px;
+    background-image: linear-gradient(90deg, #15dc43 0%, #43E7AD 50%, #E2D45C 100%); 
+    border-radius: 50%;
 }
 
 
@@ -57,6 +60,12 @@ section {
     color: white;
     padding-top: 4px;
     text-align: center;
+    border-radius: 10px;
+    background-image: linear-gradient(90deg, #15dc43 0%, #43E7AD 50%, #E2D45C 100%); 
+}
+
+section p {
+    color: gray;
 }
 
 section div {
@@ -74,6 +83,17 @@ section ul {
     margin-top: 24px;
 }
 
+.movie-list img {
+    width: 90px;
+    height: 120px;
+    border-radius: 8px;
+}
+
+.music-list img {
+    width: 90px;
+    border-radius: 8px;
+}
+
 .games-list img {
     width: 90px;
     border-radius: 8px;
@@ -82,3 +102,4 @@ section ul {
 .stream-list img {
     border-radius: 50%;
 }
+
